--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <script src="index.js"></script>
+        <script src="udemy.js"></script>
     </head>
     <body></body>
 </html>
